Fixed "invisible" calendar icon in the Publish dialog (#2718)

--- a/src/main/resources/assets/styles/publish/publish-dialog-issues.less
+++ b/src/main/resources/assets/styles/publish/publish-dialog-issues.less
@@ -46,6 +46,7 @@
 
     button {
       background: none;
+      padding: 0 4px;
 
       span {
         color: @admin-button-blue2;
